# GeantSimulation

./: BlockDetectorConstruction.cc  BlockDetectorConstruction.h  CMakeLists.txt  README.md  gflashDetector.xml  gflashDetector25.xml  init.sh  initMacro.ini  initMacro_pbwo4.ini  init_vis.mac  out.lot  pbwo4_10gev.ini  pbwo4_flatEnergy.ini  pbwo4_singleEnergy.ini  pbwo4_singleEnergy_fast.ini  vis.mac
analysis/: LinkDef.h  Makefile  README.md
include/: B1PrimaryGeneratorAction.hh  CalorimeterHit.h  CalorimeterSD.h  DebugKillPhysics.h  DebugKillProcess.h  DebugKillProcessMessenger.h  DetectorConstruction.hh  DetectorMessenger.hh  EventInformation.hh  FullSimActions.h  GdmlDetectorConstruction.h  ParallelWorldForReadout.h  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  SaveToEdmEventAction.hh  SaveToFileEventAction.hh  SteppingAction.hh  myG4FastSimulationHelper.hh  myG4FastSimulationPhysics.hh  myGFlashHitMaker.hh  myGFlashHomoShowerParameterisation.hh  myGFlashShowerModel.hh  myGFlashShowerModelMessenger.hh  myGVFlashHomoShowerTuning.hh
python/: drawEnergySpectrum.py
src/: B1PrimaryGeneratorAction.cc  CalorimeterHit.cpp  CalorimeterSD.cpp  DebugKillPhysics.cc  DebugKillProcess.cpp  DebugKillProcessMessenger.cpp  DetectorConstruction.cc  DetectorMessenger.cc  EventInformation.cc  FCCmain.cc  FullSimActions.cpp  GdmlDetectorConstruction.cpp  ParallelWorldForReadout.cpp  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  SaveToEdmEventAction.cc  SaveToFileEventAction.cc  SteppingAction.cc  main.cc  myG4FastSimulationHelper.cc  myG4FastSimulationPhysics.cc  myGFlashHitMaker.cc  myGFlashHomoShowerParameterisation.cc  myGFlashShowerModel.cc  myGFlashShowerModelMessenger.cc  myGVFlashHomoShowerTuning.cc
utils/: CMakeLists.txt  README.md
utils/analysis/: CMakeLists.txt  LinkDef.h  README.md  combine.py  combineParameters.py  compare.py  compare3.py  compareGeneratedParameters.py  createHistograms.cpp  createHistograms.h  createHistograms.py  parametrisation.cpp  parametrisation.h  parametrisation.py
utils/h5/: CMakeLists.txt  LinkDef.h  Makefile  README.md  h52root.cpp  h52root.h  h52root.py  root2h5.cpp  root2h5.h  root2h5.py
